--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 http://developers.facebook.com/docs/authentication/
 
 
-`auth = Fbrails::Auth.new(app_id,app_secret,app_url)
+auth = Fbrails::Auth.new(app_id,app_secret,app_url)
 
   
 auth.redirect_url # get a redirect page to server-flow authorization
@@ -17,4 +17,4 @@ token = auth.token(code) # getting token from code which send back from facebook
 
 @graph.token_valid? # return true of false
 
-@graph.me # return hash with your info or false`
+@graph.me # return hash with your info or false
