--- a/README
+++ b/README
@@ -9,12 +9,14 @@ auth = Fbrails::Auth.new(app_id,app_secret,app_url)
 auth.redirect_url # get a redirect page to server-flow authorization
 
 token = auth.token(code) # getting token from code which send back from facebook
+# => {:token => "TOKEN", :expires => "TIME_WHEN_EXPIRES"}
 
+Fbrails::Auth.token_valid?(token) # return true of false
+OR
+Fbrails::Auth.token_valid?(token,expire_time) # return true of false
 
 
 
 @graph = Fbrails::Graph.new(token)
-
-@graph.token_valid? # return true of false
 
 @graph.me # return hash with your info or false
